@@ -232,6 +232,7 @@ msg_specify_name: '&bSpecify town name'
 msg_specify_nation_name: '&bSpecify nation name'
 msg_peasant_right: '&bA peasant hasn''t the right to force his leaders into the throne.'
 msg_cost_spawn: '&bYou were charged %s to teleport to the town''s spawn.'
+msg_cost_spawn_refund: '&bYou were refunded the charge for using town spawn.'
 msg_town_spawn_warmup: '&bWaiting to teleport...'
 msg_town_rename_disabled: '&bTown Renaming Disabled'
 msg_town_set_name: '&b%s renamed town to %s.'
