@@ -804,3 +804,4 @@ v0.77.0.4:
 	- Fixed '/res delete <name>' and made it admin only.
 	  Command will remove all traces of the resident (including deleting the residents data file).
 	- Towny now supports the Essentials Cooldown and delay.
+	- When using the Towny teleport delay, aborted teleports now refund the money.
